# ainu-corpora-process

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_split.py  run_split_light.py
.github/workflows/: deploy.yml
corpus/: basic_statistics.ipynb  create_tokenized_corpus.ipynb  extract_words.ipynb  generate_conllu_format.ipynb  generate_word_frequency.ipynb  inspect_tokenized_corpus.ipynb  search_by_pos.ipynb  word_freq.ipynb
corpus/ainu_corpora/: build_frequency.py
corpus/analysis/: morpheme_coverage.ipynb  syllables.ipynb  wa_kor_kane_hine.ipynb
corpus/legacy/: chiba.ipynb
corpus/ninjal/: README.md  convert_glossed_corpus_to_conllu.ipynb  download_glossed_corpus.ipynb  extract_morpheme_lexicon.py  sync_glossed_corpus.py
dictionary/: README.md  XPOS.md  asahikawa_normalize.py  asahikawa_ocr.py  asahikawa_parse.py  batchelor1938_apply_manual.py  batchelor1938_manual_matches.py  batchelor1938_reocr.py  batchelor1938_reocr_full.py  batchelor1938_reocr_merge.py  batchelor1938_split_sections.py  batchelor_modern_match.py  batchelor_modern_match_v2.py  batchelor_modern_match_v3.py  batchelor_normalize_lib.py  build_ainu_itah_terms.py  compare_wiktionary_lemmas.py  expand_word_match_pattern.ipynb  extract_vocabulary.ipynb  fix_batchelor1938_ocr.py  generate_combined_glosses.ipynb  generate_combined_part_of_speech.ipynb  generate_karahuto_data.ipynb  generate_word_composition.ipynb  import_abvd_proto_ainu.py  import_akulov_rus_ain.py  import_asjp.py  import_batchelor1905.py  import_batchelor1938.py  import_batchelor1938_eng.py  import_dobrotvorsky_1875.py  import_ff_ainu_wordlists.py  import_lexicons_ru_ainu.py  import_loanwordbank_ainu.py  import_local_corpora_dictionaries.py  import_mizushina1893.py  import_northeuralex.py  import_omniglot_ainu_numerals.py  import_pannous_swadesh.py  import_proto_ainu_shimabukuro.py  (+24 more)
dictionary/ainu-archive/: extract_words.ipynb  modify_notebook.py
dictionary/enwikt/: acquire_dump.py  generate_entries.py  paths.py
dictionary/ff-ainu/: extract_vocabulary.ipynb  extract_words.ipynb
dictionary/input/: manual_gloss.json
dictionary/itakuoeroskip/: .gitignore  extract_words.ipynb  find_untranslated.ipynb
dictionary/jawikt/: extract_words.ipynb  generate_tsv.py
dictionary/mukawa/: download_mukawa.ipynb  mukawa_audio.txt
dictionary/review/: 2026-06-sakhalin-review.md  (+1 more)
lexeme_db/: README.md  __init__.py  build.py  cli.py  export_sqlite.py  ingest.py  normalize.py  schema.py
morpheme_db/: README.md  __init__.py  build.py  cli.py  export_references.py  export_sqlite.py  ingest_corpora_frequency.py  ingest_dictionary.py  ingest_ff_ainu.py  ingest_ninjal.py  ingest_tamura.py  ingest_tommy1949.py  ingest_translations.py  ingest_wiktionary.py  ingest_wiktionary_compositions.py  schema.py  valency.py
text/: .gitignore  convert_pdf_to_images.ipynb  correction.ipynb
utils/: README.md  pyproject.toml  test_tokenize.py
web/: README.md  package.json  svelte.config.js  vite.config.ts  wrangler.jsonc
web/src/: app.css  (+2 more)
wiktionary/: possessive.ipynb  wiktionary.pyi
wiktionary-dump-extractor/: Cargo.toml  pyproject.toml  wiktionary_dump_extractor.pyi
wiktionary-dump-extractor/src/: lib.rs
(+111 files in other folders)
