[package]
name = "wiktionary_dump_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wiktionary_dump_extractor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
quick-xml = "0.27"
regex = "1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
